--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
 
 <mat-drawer-container class="mat-drawer-container" autosize>
-    <mat-drawer #drawer class="example-sidenav" mode="side">
-      <p>Auto-resizing sidenav</p>
+    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+      <div class="logo-container">
+        Platz für Logo
+      </div>
+
+      <ul class="menu-items">
+        <li routerLink="/dashboard"><mat-icon>dashboard</mat-icon>Dashboard</li>
+        <li routerLink="/user"><mat-icon>perm_identity</mat-icon>User</li>
+      </ul>
     </mat-drawer>
   
     <div class="example-sidenav-content">
@@ -13,6 +20,10 @@
           <span>Simple CRM</span>
       </mat-toolbar-row>
       </mat-toolbar>
+      <div class="router-container">
+        <router-outlet></router-outlet>
+      </div>
+      
     </div>
 </mat-drawer-container>
   
