--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,48 @@
     cursor: pointer;
     padding-right: 20px;
 }
+
+.sidenav{
+    width: 300px;
+}
+.logo-container{
+    padding-left: 16px;
+    padding-right: 16px;
+    min-height: 56px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.04);
+    display: flex;
+    align-items: center;
+}
+
+mat-toolbar, mat-toolbar-row{
+    min-height: 56px;
+    height: 56px;
+}
+
+.menu-items{
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+
+    mat-icon{
+        margin-right: 16px;
+    }
+    
+    li{
+        padding-left: 16px;
+        padding-right: 16px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+        &:hover{
+            background-color: rgba(0, 0, 0, 0.04);
+        }
+    }
+}
+
+.router-container{
+    padding-left: 56px;
+    padding-top: 16px;
+}
