add Json to firebase

--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,48 +1,52 @@
+<div class="dialog-container"><mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+  <h1 mat-dialog-title>Add User</h1>
 
-<h1 mat-dialog-title>Add User</h1>
-<div mat-dialog-content class="dialog-input-container">
-  <mat-form-field class="mr-16" appearance="outline">
-    <mat-label>First Name</mat-label>
-    <input [(ngModel)]="user.firstName" matInput placeholder="First Name">
-  </mat-form-field>
+  <div mat-dialog-content class="dialog-input-container">
+    <mat-form-field class="mr-16" appearance="outline">
+      <mat-label>First Name</mat-label>
+      <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="First Name">
+    </mat-form-field>
 
-  <mat-form-field appearance="outline">
-    <mat-label>Last Name</mat-label>
-    <input [(ngModel)]="user.lastName" matInput placeholder="">
-  </mat-form-field>
-<div>
-  <mat-form-field appearance="outline" class="full-with">
-    <mat-label>Birth Date</mat-label>
-    <input [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
-</div>
-<div>
-  <mat-form-field appearance="outline" class="full-with">
-    <mat-label>Street + House No.</mat-label>
-    <input [(ngModel)]="user.street" matInput placeholder="">
-  </mat-form-field>
-</div>
-<div>
-  <mat-form-field class="mr-16" appearance="outline">
-    <mat-label>Zip Code</mat-label>
-    <input [(ngModel)]="user.zipCode" matInput placeholder="">
-  </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Last Name</mat-label>
+      <input [disabled]="loading"  [(ngModel)]="user.lastName" matInput placeholder="">
+    </mat-form-field>
+    <div>
+      <mat-form-field appearance="outline" class="full-with">
+        <mat-label>Birth Date</mat-label>
+        <input [disabled]="loading"  [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-with">
+        <mat-label>Street + House No.</mat-label>
+        <input [disabled]="loading"  [(ngModel)]="user.street" matInput placeholder="">
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field class="mr-16" appearance="outline">
+        <mat-label>Zip Code</mat-label>
+        <input [disabled]="loading"  [(ngModel)]="user.zipCode" matInput placeholder="">
+      </mat-form-field>
 
-  <mat-form-field appearance="outline">
-    <mat-label>City</mat-label>
-    <input [(ngModel)]="user.city" matInput placeholder="">
-  </mat-form-field>
-</div>
-<div>
-  <mat-form-field appearance="outline" class="full-with">
-    <mat-label>Email</mat-label>
-    <input [(ngModel)]="user.email" matInput placeholder="">
-  </mat-form-field>
-</div>
-</div>
-<div mat-dialog-actions class="dialog-buttons">
-  <button mat-button [mat-dialog-close] >Cancel</button>
-  <button mat-button [mat-dialog-close] (click)="addUser()" >Add</button>
+      <mat-form-field appearance="outline">
+        <mat-label>City</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="">
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-with">
+        <mat-label>Email</mat-label>
+        <input [disabled]="loading"  [(ngModel)]="user.email" matInput placeholder="">
+      </mat-form-field>
+    </div>
+
+  </div>
+
+  <div mat-dialog-actions class="dialog-buttons">
+    <button mat-button [mat-dialog-close]>Cancel</button>
+    <button mat-button (click)="addUser()">Add</button>
+  </div>
 </div>
