--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,26 @@
 <div class="user-container">
 
+    <mat-card>
+        <table class="user-table">
+            <tr>
+                <th>Name</th>
+                <th>E-Mail</th>
+                <th>City</th>
+            </tr>
+            <tr>
+                <td>wqe</td>
+                <td>wqe</td>
+                <td>wqe</td>
+            </tr>
+
+            <tr>
+                <td>wqe</td>
+                <td>wqe</td>
+                <td>wqe</td>
+            </tr>
+        </table>
+      </mat-card>
+
 
     <div class="add-user-button">
         <button (click)="openDialog()" mat-fab matTooltip="Primary" color="primary" matTooltip="Add new User"
