--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,12 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.04);
     display: flex;
     align-items: center;
+    justify-content: center;
+
+    img{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 }
 
 mat-toolbar, mat-toolbar-row{
