--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -47,6 +47,6 @@
 
   <div mat-dialog-actions class="dialog-buttons">
     <button mat-button [mat-dialog-close]>Cancel</button>
-    <button mat-button (click)="addUser()">Add</button>
+    <button mat-button (click)="addUser()">Save</button>
   </div>
 </div>
