Add a Edit User / Adress- Add API News

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </mat-drawer>
   
     <div class="example-sidenav-content">
-      <mat-toolbar color="primary">
+      <mat-toolbar class="toolbar">
         <mat-toolbar-row>
           <mat-icon class="menuIcon" (click)="drawer.toggle()">
             menu
