--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,3 +58,8 @@ mat-toolbar, mat-toolbar-row{
     padding-left: 56px;
     padding-top: 16px;
 }
+
+.toolbar{
+    background-color: rgb(48,48,48);
+    color: white;
+}
