--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -23,6 +23,6 @@
   
     <div mat-dialog-actions class="dialog-buttons">
       <button mat-button [mat-dialog-close]>Cancel</button>
-      <button mat-button (click)="addUser()">Save</button>
+      <button mat-button (click)="updateUser()">Save</button>
     </div>
   </div>
